--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form  action="/" method="post">
 
         <label for="CityInput">City Name:</label>
-        <input id="CityInput" type="text" name="CityName">
+        <input id="CityInput" type="text" name="cityName">
         <button type="submit">Go</button>
 
     </form>
